--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body {
     -moz-osx-font-smoothing: grayscale;
 }
 
-.lien_nav{
+.liens_nav{
     background-color: brown;
     padding: 10px;
     color: white;
