--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body {
 .liens_nav {
     background-color: brown;
     padding: 10px;
-    color: white;
+    color: #FFFFFF;
     box-shadow: 1px 1px 2px 3px;
 }
 
