--- a/style.css
+++ b/style.css
@@ -9,9 +9,10 @@ body {
 
 .liens_nav {
     background-color: brown;
-    padding: 10px;
+    padding: 15px;
     color: #FFFFFF;
     box-shadow: 1px 1px 2px 3px;
+    text-decoration: none;
 }
 
 a,
