--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body {
 }
 
 .liens_nav {
-    background-color: grey;
+    background-color: white;
     padding: 15px;
     color: #ffffff;
     box-shadow: 1px 1px 2px 1px grey;
