--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@ body {
 
 .liens_nav {
     background-color: white;
+    margin-right: 5px;
     padding: 15px;
     color: #ffffff;
     box-shadow: 1px 1px 2px 1px grey;
